<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/todo_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todo_name" />

    <EditText
        android:id="@+id/todo_text_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todo_text"
        app:layout_constraintTop_toBottomOf="@+id/todo_name_edit"/>

    <EditText
        android:id="@+id/todo_data_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todo_data"
        app:layout_constraintTop_toBottomOf="@+id/todo_text_edit"/>

</android.support.constraint.ConstraintLayout>